added portfolio page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </a>
       </li>-->
       <li>
-        <a href = "/portfolio">
+        <a href = "/portfolio/">
           Portfolio
         </a>
       </li>
