--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
@@ -23,9 +23,9 @@
 <!-- End Jekyll SEO tag -->
 <style type="text/css" media="screen">
   h1 {
-    font-size: 3.5rem;
-    font-weight: 400;
-    font-family: 'Montserrat Subrayada', Helvetica, Arial, sans-serif;
+    font-size: 4rem;
+    font-weight: 500;
+    font-family: 'Poiret One', Helvetica, cursive, sans-serif;
   }
 
   li, body, h2, h3, h4, h5, h6 {
@@ -56,11 +56,7 @@
           About
         </a>
       </li>
-      <!--<li>
-        <a href = "/blog/">
-          Blog
-        </a>
-      </li>-->
+
       <li>
         <a href = "/portfolio/">
           Portfolio
