--- a/about/index.html
+++ b/about/index.html
@@ -90,8 +90,8 @@
       </li>
 
       <li>
-        <a href = "/portfolio">
-          Resume
+        <a href = "/portfolio/">
+          Portfolio
         </a>
       </li>
 </ul>
