--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
@@ -28,8 +29,8 @@
     font-family: 'Poiret One', Helvetica, cursive, sans-serif;
   }
 
-  li, body, h2, h3, h4, h5, h6 {
-    font-family: Helvetica, Arial, sans-serif;
+  li, body, p, h2, h3, h4, h5, h6 {
+    font-family: 'Commissioner', Helvetica, Arial, sans-serif;
   }
 
   li {
